@@ -1,3 +1,6 @@
+2010-05-23 Devil Wang <wxjeacen@gmail.com>
+    * Add software for Fedora 13
+	
 2010-05-23 Homer Xing <homer.xing@gmail.com>
 
     * Immediately show/hide "quick setup" button.
